--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,8 @@ a:hover{color:var(--crimson)}
   position:absolute; inset:0;
   background:
     linear-gradient(90deg, rgba(232,242,245,.95), rgba(232,242,245,.75)),
-    url("https://source.unsplash.com/I-_wYj9yOzw/2000x1200") center/cover no-repeat;
+    url("https://images.unsplash.com/photo-1672552226380-486fe900b322?auto=format&fit=crop&w=2000&q=80")
+ center/cover no-repeat;
   transform:scale(1.03);
 }
 .hero-inner{
